crates/ace-macros/tests/compile_fail/enum_missing_id.rs
use ace_macros::FrameRead;

#[derive(FrameRead)]
#[frame(error = "TestError")]
pub enum MissingId {
    Foo,
    Bar,
}

fn main() {}
