crates/ace-macros/tests/compile_fail/enum_missing_id.stderr
error: variant `Foo`: must have `#[frame(id = "...")]` or `#[frame(id_pat = "...")]`
 --> tests/compile_fail/enum_missing_id.rs:3:10
  |
3 | #[derive(FrameRead)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FrameRead` (in Nightly builds, run with -Z macro-backtrace for more info)
